# phrasevault

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  VERSIONING.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json  updateCompanion.sh
.github/workflows/: ci.yml  docker.yml
agent/: INSTALL.md  com.phrasevault.companion.plist  companion.mjs  install.sh
apps/macos-companion/: Info.plist  README.md  build.sh  package-dmg.sh
apps/macos-companion/Resources/: AppIcon.icns
apps/macos-companion/Sources/: AgentController.swift  AppRoot.swift  CompanionSSH.swift  ConsoleView.swift  LoginItem.swift  SetupView.swift
client/: package-lock.json  package.json  vite.config.ts
client/src/: AddMediaModal.tsx  App.tsx  LoginPage.tsx  ScanPage.tsx  SettingsPage.tsx  api.ts  crypto.ts
crates/pvfs-cli/: Cargo.toml
crates/pvfs-cli/src/: main.rs
crates/pvfs-client/: Cargo.toml
crates/pvfs-client/src/: lib.rs
crates/pvfs-companion/: Cargo.toml
crates/pvfs-companion/src/: agent.rs  approve.rs  audit.rs  client.rs  keychain.rs  lib.rs  main.rs  origins.rs  pairings.rs  paths.rs  policy.rs  proto.rs  session.rs  signer.rs  store.rs  tenant.rs  vault.rs  webagent.rs
crates/pvfs-companion/tests/: agent_socket.rs  init_via_companion.rs  pairing_relay.rs  secure_unwrap.rs  sign_device_cert.rs  signin_pvfsd.rs  tenant_socket.rs  web_agent.rs
crates/pvfs-core/: Cargo.toml
crates/pvfs-core/src/: acl.rs  crypto.rs  encoding.rs  engine.rs  envelope.rs  error.rs  event.rs  fs.rs  identity.rs  lib.rs  link.rs  log_store.rs  mount.rs  node.rs  orderkey.rs  projection.rs  storage.rs  walk.rs
crates/pvfs-core/tests/: case_c_lineage.rs  p0_spec.rs  p15_mounts.rs  p1_storage.rs  p2_access.rs  p3_secure.rs
crates/pvfs-proto/: Cargo.toml
crates/pvfs-proto/src/: lib.rs
crates/pvfsd/: Cargo.toml
crates/pvfsd/src/: lib.rs  main.rs
crates/pvfsd/tests/: serve.rs
deploy/ansible/: README.md  install.yml  inventory.example.ini  pipeline.yml
deploy/ansible/files/: pvfs-tmpfiles.conf  pvfsd@.service  smoke-test.sh
deploy/ansible/roles/phrasevault/defaults/: main.yml
deploy/ansible/roles/phrasevault/handlers/: main.yml
deploy/ansible/roles/phrasevault/meta/: main.yml
deploy/ansible/roles/phrasevault/tasks/: custom.yml  main.yml  saltbox.yml  ubuntu.yml
deploy/ansible/roles/phrasevault/templates/: phrasevault.service.j2
docs/: 00-architecture-decisions.md  01-core-engine-design.md  02-p0-core-engine-spec.md  03-federation-trust-and-uris.md  04-p1-storage-and-fs-ops-spec.md  05-instance-registry-and-mounts.md  06-access-control-and-daemon.md  07-daemon-protocol.md  08-roadmap-and-status.md  09-tags-and-the-live-daemon.md  10-per-key-tag-authority.md  11-compaction-and-verifiable-snapshots.md  12-secure-node-type.md  13-pvos-driven-requirements.md  14-companion-app.md  15-key-replacement.md  16-joint-agent-api.md  DEPLOY.md  INSTALL.md  PHASE-B-ACL-NOTES.md  PVFS-ARCHITECTURE.md  PVFS-HTTP-API.md  USER-MANUAL.md
examples/: example_forest.json
infra/: README.md
phrasevault/: __init__.py  cli.py  client.py  credentials.py  crypto.py  forest.py  server.py  store.py  transfer.py  vault.py
src/: index.ts
src/apps/plexvault/: index.ts  nodes.ts  types.ts
src/apps/relay/: index.ts  nodes.ts  query.ts  types.ts
src/auth/: index.ts
src/crypto/: index.ts
src/forest/: api.ts  cipher.ts  db.ts  index.ts  matcher.ts  pruner.ts  pvfs-cascade.ts  pvfs-orphans.ts  pvfs-scan.ts  pvfs-trees.ts  pvfs.ts  scan.ts  schema.sql  signer.ts  types.ts  walker.ts
src/identity/: index.ts
src/node/: index.ts  types.ts
src/replication/: index.ts
src/server/: index.ts
src/store/: hypercore.ts  index.ts
src/types/: hypercore.d.ts  hyperswarm.d.ts
tests/: query.mjs  test_forest.py  test_identity.py  test_vault.py
v0.0-concept/: README.md  SECURITY.md  deploy.sh  docker-compose.yml  requirements.txt
v0.0-concept/agent/: install.sh
v0.0-concept/deploy/ansible/roles/phrasevault/tasks/: main.yml
v0.0-concept/docs/: ADMIN-FACTORY-RESET.md
v0.0-concept/phrasevault/: identity.py  server.py  vault.py
v0.0-concept/scripts/: push_forest.py
v0.0-concept/src/forest/: pvfs.ts  signer.ts
v0.0-concept/src/identity/: index.ts
v0.0-concept/src/replication/: manager.ts
v0.0-concept/src/server/: index.ts
v0.0-concept/tests/: conftest.py  integration.mjs  replication.mjs  test_crypto.py
