[workspace]
members = [
    "crates/pvfs-core",
    "crates/pvfs-cli",
    "crates/pvfs-proto",
    "crates/pvfs-client",
    "crates/pvfsd",
    "crates/pvfs-companion",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
blake3 = "1.5"
k256 = "0.13"
bip39 = { version = "2.1", features = ["rand"] }
bip32 = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["user", "fs"] }
clap = { version = "4.4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Companion key vault (doc 14 §5): Argon2id KDF + XChaCha20-Poly1305 AEAD, with
# zeroizing key material.
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1"
