[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phrasevault"
version = "0.1.0"
description = "Distributed encrypted knowledge network — passphrase as address, key, and namespace"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Chris Turner", email = "christcb@yahoo.com" }]
keywords = ["encryption", "knowledge-graph", "passphrase", "blake3", "argon2"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
]
dependencies = [
    "blake3>=1.0.8",
    "argon2-cffi>=23.1.0",
    "PyNaCl>=1.6.2",
    # 21.0.0 fails to build (hatchling: "Expected exactly one LICENSE file in cffi distribution").
    # Pin 20.x until a fixed 21.x is published. See PyPI / ccxt#27246 / NixOS#437068.
    "coincurve>=20.0.0,<21",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
phrasevault = "phrasevault.cli:main"

[project.urls]
Homepage = "https://github.com/christcb03/phrasevault"
Repository = "https://github.com/christcb03/phrasevault"
Issues = "https://github.com/christcb03/phrasevault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["phrasevault*"]
