[package]
name = "pvfs-cli"
description = "Thin CLI over pvfs-core (spec §13.4)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pvfs"
path = "src/main.rs"

[dependencies]
pvfs-core = { path = "../pvfs-core" }
pvfs-client = { path = "../pvfs-client" }
pvfs-companion = { path = "../pvfs-companion" }
clap.workspace = true
hex.workspace = true
serde_json.workspace = true
notify = "6"
