[package]
name = "pvfs-companion"
description = "PVFS companion — local key vault + signing agent (doc 14)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pvfs_companion"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true }
serde_json.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
