[package]
name = "pvfs-companion"
description = "PVFS companion — local key vault + signing agent (doc 14)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pvfs_companion"
path = "src/lib.rs"

[[bin]]
name = "pvfs-companion"
path = "src/main.rs"

[features]
default = ["os-keychain"]
# OS secret-store sealing for the vault data key (doc 14 §5, phase 4):
# macOS Keychain / Linux Secret Service / Windows Credential Manager.
# The Linux backend needs libdbus at build time (apt: libdbus-1-dev) +
# pkg-config; use --no-default-features for a passphrase-only build.
os-keychain = ["dep:keyring"]

[dependencies]
pvfs-core = { path = "../pvfs-core" }
pvfs-proto = { path = "../pvfs-proto" }
clap.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true }
serde_json.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
rpassword = "7"
keyring = { version = "3", optional = true, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }

[dev-dependencies]
tempfile.workspace = true
