[package]
name = "pvfs-core"
description = "PVFS P0 core engine (kernel): nodes, links, event log, projection, identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
k256.workspace = true
chacha20poly1305.workspace = true
bip39.workspace = true
bip32.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
uuid.workspace = true
nix = { workspace = true, features = ["user", "fs"] }

[dev-dependencies]
tempfile.workspace = true
