[package]
name = "pvfsd"
description = "PVFS per-user daemon — serves a forest over a Unix socket (doc 07)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pvfsd"
path = "src/lib.rs"

[[bin]]
name = "pvfsd"
path = "src/main.rs"

[dependencies]
pvfs-core = { path = "../pvfs-core" }
pvfs-proto = { path = "../pvfs-proto" }
hex.workspace = true
rand.workspace = true
clap.workspace = true
# `signal` for graceful SIGTERM/SIGINT shutdown (doc 08 §4 item 4); feature
# unification adds it on top of the workspace's user/fs features.
nix = { workspace = true, features = ["signal"] }

[dev-dependencies]
pvfs-client = { path = "../pvfs-client" }
tempfile.workspace = true
hex.workspace = true
